# starked-education

./: .gitignore  .versionrc.json  CHANGELOG.md  CONTRIBUTING.md  DEVELOPMENT.md  PR_BODY.md  commitlint.config.js  docker-compose.yml  package-lock.json  package.json  pnpm-lock.yaml
.github/: SECURITY.md  dependabot.yml
.github/codeql/: codeql-config.yml
.husky/: pre-commit
backend/: .eslintrc.json  SETUP_GUIDE.md  package-lock.json  package.json
contracts/: Cargo.toml  IMPLEMENTATION_SUMMARY.md  fix_final.py  fix_v20.py  fix_v21.py  fix_v21.sh  fix_v21_comprehensive.py
contracts/src/: analytics_storage.rs  consciousness.rs  courseMetadata.rs  course_metadata.rs  credential_registry.rs  credential_registry_test.rs  credentials.rs  credentials_test.rs  dna_services.rs  dna_storage.rs  dynamic_fees.rs  dynamic_nft.rs  dynamic_nft_test.rs  eventLogger.rs  event_logger.rs  events.rs  lib.rs  marketplace.rs  marketplace_test.rs  pause.rs  proctoring.rs  sync_coordination.rs  time_lock_credential.rs  tokenomics.rs  tokenomics_test.rs  upgrade.rs  user_profile.rs  user_profile_test.rs  vrf_system.rs
contracts/src/utils/: format.rs  mod.rs  storage.rs
docs/: ACCEPTED_FILE_TYPES.md  API_REFERENCE.md  ARCHITECTURE_DECISIONS.md  DEPLOYMENT.md
frontend/: .eslintrc.json  PR_TOAST_NOTIFICATION_SYSTEM.md  README.md  jest.setup.js  next-i18next.config.js  next.config.js  package-lock.json  package.json  playwright.config.ts  tailwind.config.js  tsconfig.json
scripts/: addSwaggerPlaceholders.ps1  deploy.sh  generateSwaggerPlaceholders.js  seed-dev.sh  verify.sh
(+418 files in other folders)
